--- a/vercel.json
+++ b/vercel.json
@@ -26,6 +26,14 @@
         { "key": "Cache-Control", "value": "public, max-age=86400, immutable" },
         { "key": "Content-Security-Policy", "value": "" }
       ]
+    },
+
+    {
+      "source": "/project-info/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=86400, immutable" },
+        { "key": "Content-Security-Policy", "value": "" }
+      ]
     }
   ]
 }
