--- a/vercel.json
+++ b/vercel.json
@@ -9,9 +9,13 @@
       "headers": [
         { "key": "Cache-Control", "value": "public, no-cache" },
         { "key": "X-Content-Type-Options", "value": "nosniff" },
-        { "key": "Content-Security-Policy", "value": "default-src 'self'; object-src 'none'; frame-ancestors 'self'" },
         { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
         { "key": "Strict-Transport-Security", "value": "max-age=31536000" },
+
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self' *.googletagmanager.com; connect-src *.google-analytics.com *.googletagmanager.com; object-src 'none'; frame-ancestors 'self'"
+        },
 
         {
           "key": "Permissions-Policy",
