Add cache control to 'analytics.js'.
Signed-off-by: Danial Zahid <danial-zahid@outlook.com>

--- a/vercel.json
+++ b/vercel.json
@@ -38,6 +38,14 @@
         { "key": "Cache-Control", "value": "public, max-age=86400, immutable" },
         { "key": "Content-Security-Policy", "value": "" }
       ]
+    },
+
+    {
+      "source": "/misc/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=86400, immutable" },
+        { "key": "Content-Security-Policy", "value": "" }
+      ]
     }
   ]
 }
