--- a/vercel.json
+++ b/vercel.json
@@ -1,50 +1,26 @@
 {
   "cleanUrls": true,
-  "trailingSlash": false,
-  "github": { "silent": true },
 
   "headers": [
     {
       "source": "/(.*)",
       "headers": [
-        { "key": "Cache-Control", "value": "public, no-cache" },
         { "key": "X-Content-Type-Options", "value": "nosniff" },
-        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        },
         { "key": "Strict-Transport-Security", "value": "max-age=31536000" },
 
         {
           "key": "Content-Security-Policy",
-          "value": "script-src 'self' *.googletagmanager.com; connect-src *.google-analytics.com *.googletagmanager.com *.analytics.google.com; img-src 'self' *.google-analytics.com *.googletagmanager.com; object-src 'none'; frame-ancestors 'self'"
+          "value": "object-src 'none'; frame-ancestors 'none'"
         },
 
         {
           "key": "Permissions-Policy",
-          "value": "accelerometer=(), autoplay=(), camera=(), cross-origin-isolated=(), display-capture=(), document-domain=(), encrypted-media=(), fullscreen=(self), geolocation=(), gyroscope=(), keyboard-map=(), magnetometer=(), microphone=(), midi=(), payment=(), picture-in-picture=(), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(), usb=(), web-share=(), xr-spatial-tracking=(), clipboard-read=(), clipboard-write=(), hid=(), serial=(), window-placement=()"
+          "value": "accelerometer=(), ambient-light-sensor=(), autoplay=(), battery=(), camera=(), cross-origin-isolated=(), display-capture=(), document-domain=(), encrypted-media=(), execution-while-not-rendered=(), execution-while-out-of-viewport=(), fullscreen=(), geolocation=(), gyroscope=(), keyboard-map=(), magnetometer=(), microphone=(), midi=(), navigation-override=(), payment=(), picture-in-picture=(), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(), usb=(), web-share=(), xr-spatial-tracking=()"
         }
-      ]
-    },
-
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=86400, immutable" },
-        { "key": "Content-Security-Policy", "value": "" }
-      ]
-    },
-
-    {
-      "source": "/project-info/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=86400, immutable" },
-        { "key": "Content-Security-Policy", "value": "" }
-      ]
-    },
-
-    {
-      "source": "/misc/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=86400, immutable" },
-        { "key": "Content-Security-Policy", "value": "" }
       ]
     }
   ]
